# group-commit-policy

./: .gitignore  CITATION.cff  PREREGISTRATION.md  README.md  REPRODUCIBILITY.md  pyproject.toml
bench/: measure_fsync.py  pg_commit_delay.sh  run_real.py  run_synthetic.py
group_commit/: __init__.py  device.py  experiment.py  sim.py  theory.py
results/: H1.json  H5.json  contrast.json  fsync_ebs.json  fsync_nvme.json  pg_commit_delay.json  pg_commit_delay_c2.json  threshold.json
tests/: test_experiment.py  test_sim.py  test_theory.py
