[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "group-commit-policy"
version = "0.1.0"
description = "When is adaptive group-commit tuning worth it? A closed-loop self-clocking analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Madhulatha Mandarapu", email = "madhulatha@samyama.ai" },
    { name = "Sandeep Kunkunuru", email = "sandeep@samyama.ai" },
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
dev = ["pytest>=7", "matplotlib>=3.6", "scipy>=1.9"]

[tool.setuptools.packages.find]
include = ["group_commit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
